# vtextedit

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  coc_update.cmd  output.txt  vtextedit.pro
demo/: CMakeLists.txt  demo.pro  helper.h  logger.h  main.cpp
demo/data/example_files/: example.cpp  example.md  example.txt  example_files.qrc
demo/data/syntax/: syntax.qrc
libs/katevi/: CMakeLists.txt
libs/katevi/src/: cmds.cpp  cmds.h  command.cpp  command.h  completion.cpp  completionrecorder.cpp  completionrecorder.h  completionreplayer.cpp  completionreplayer.h  globalstate.cpp  history.cpp  history.h  inputmodemanager.cpp  jumps.cpp  jumps.h  kateviconfig.cpp  keymapper.cpp  keymapper.h  keyparser.cpp  keyparser.h  lastchangerecorder.cpp  lastchangerecorder.h  macrorecorder.cpp  macrorecorder.h  macros.cpp  macros.h  mappings.cpp  mappings.h  marks.cpp  marks.h  motion.cpp  motion.h  range.cpp  range.h  registers.cpp  registers.h  searcher.cpp  searcher.h  viutils.cpp  viutils.h
libs/peg-markdown-highlight/: CMakeLists.txt  README.md  pmh_parser.c
src/: CMakeLists.txt  src.pro
src/data/themes/: default.theme  theme.qrc
src/data/translations/: vtextedit_ja.ts
src/editor/: editor.pro  editor_export.pri
src/editor/include/: include.pri
src/editor/inputmode/: abstractinputmode.cpp  abstractinputmode.h  inputmode.pri  inputmodeeditorinterface.h  inputmodemgr.cpp  inputmodemgr.h  normalinputmode.h  normalinputmodefactory.cpp  viinputmode.cpp  viinputmode.h  viinputmodefactory.cpp  viinputmodefactory.h
src/editor/markdowneditor/: codeblockhighlighter.cpp  documentresourcemgr.cpp  editorpegmarkdownhighlighter.cpp  editorpegmarkdownhighlighter.h  editorpreviewmgr.cpp  ksyntaxcodeblockhighlighter.cpp  ksyntaxcodeblockhighlighter.h  markdowneditor.pri  markdowneditorconfig.cpp  peghighlightblockdata.h  peghighlighterresult.cpp  peghighlighterresult.h  pegmarkdownhighlighter.cpp  pegparser.cpp  pegparser.h  previewmgr.cpp  textdocumentlayout.cpp  textdocumentlayout.h  textdocumentlayoutdata.h  vmarkdowneditor.cpp  webcodeblockhighlighter.cpp  webcodeblockhighlighter.h
src/editor/spellcheck/: spellcheck.pri  spellchecker.cpp  spellcheckhighlighthelper.cpp  spellcheckhighlighthelper.h
src/editor/textedit/: autoindenthelper.h  scrollbar.h  textblockdata.cpp  textedit.pri  theme.cpp  vtextedit.cpp
src/editor/texteditor/: completer.cpp  completer.h  editorextraselection.cpp  editorindicatorsborder.cpp  editorinputmode.cpp  editorinputmode.h  extraselectionmgr.cpp  extraselectionmgr.h  formatcache.h  indicatorsborder.cpp  ksyntaxhighlighterwrapper.cpp  plaintexthighlighter.cpp  plaintexthighlighter.h  statusindicator.cpp  statusindicator.h  syntaxhighlighter.cpp  syntaxhighlighter.h  texteditor.pri  textfolding.cpp  textfolding.h  viconfig.cpp  vsyntaxhighlighter.cpp  vsyntaxhighlighter.h  vtexteditor.cpp
src/editor/utils/: utils.cpp  (+8 more)
src/inputmode/: abstractinputmode.cpp  abstractinputmode.h  abstractinputmodefactory.h  inputmodeeditorinterface.h  inputmodemgr.cpp  inputmodemgr.h  normalinputmode.cpp  normalinputmode.h  normalinputmodefactory.cpp  normalinputmodefactory.h  viinputmode.cpp  viinputmode.h  viinputmodefactory.cpp  viinputmodefactory.h  vscodeinputmode.cpp  vscodeinputmode.h  vscodeinputmodefactory.cpp  vscodeinputmodefactory.h
src/libs/: libs.pro
src/markdowneditor/: cmarkadapter.cpp  cmarkadapter.h  codeblockhighlighter.cpp  documentresourcemgr.cpp  documentresourcemgr.h  editormarkdownhighlighter.cpp  editormarkdownhighlighter.h  editorpegmarkdownhighlighter.cpp  editorpegmarkdownhighlighter.h  editorpreviewmgr.cpp  editorpreviewmgr.h  foldingregionutils.h  highlightelement.h  ksyntaxcodeblockhighlighter.cpp  ksyntaxcodeblockhighlighter.h  markdownastwalker.cpp  markdownastwalker.h  markdowneditorconfig.cpp  markdownfoldingprovider.cpp  markdownfoldingprovider.h  markdownhighlightblockdata.h  markdownhighlighter.cpp  markdownhighlighterresult.cpp  markdownhighlighterresult.h  markdownparser.cpp  markdownparser.h  peghighlightblockdata.h  peghighlighterresult.cpp  peghighlighterresult.h  pegmarkdownhighlighter.cpp  pegparser.cpp  pegparser.h  previewdata.cpp  previewmgr.cpp  textdocumentlayout.cpp  textdocumentlayout.h  textdocumentlayoutdata.h  vmarkdowneditor.cpp  webcodeblockhighlighter.cpp  webcodeblockhighlighter.h
src/spellcheck/: spellchecker.cpp  spellcheckhighlighthelper.cpp  spellcheckhighlighthelper.h
src/textedit/: autoindenthelper.cpp  autoindenthelper.h  scrollbar.cpp  scrollbar.h  textblockdata.cpp  theme.cpp  vtextedit.cpp
src/texteditor/: blockspellcheckdata.h  completer.cpp  completer.h  editorcompleter.cpp  editorcompleter.h  editorextraselection.cpp  editorextraselection.h  editorindicatorsborder.cpp  editorindicatorsborder.h  editorinputmode.cpp  editorinputmode.h  extraselectionmgr.cpp  extraselectionmgr.h  formatcache.cpp  formatcache.h  indicatorsborder.cpp  indicatorsborder.h  inputmodestatuswidget.h  ksyntaxhighlighterwrapper.cpp  ksyntaxhighlighterwrapper.h  plaintexthighlighter.cpp  plaintexthighlighter.h  statusindicator.cpp  statusindicator.h  syntaxhighlighter.cpp  syntaxhighlighter.h  texteditorconfig.cpp  textfolding.cpp  textfolding.h  viconfig.cpp  vsyntaxhighlighter.cpp  vtexteditor.cpp
src/utils/: markdownutils.cpp  networkutils.cpp  noncopyable.h  texteditutils.cpp  textutils.cpp  utils.cpp  utils.h
tests/test_astwalker/: CMakeLists.txt  test_astwalker.cpp  test_astwalker.h
tests/test_benchmark/: CMakeLists.txt  test_benchmark.cpp  test_benchmark.h
tests/test_cmark_probe/: CMakeLists.txt  test_cmark_probe.cpp  test_cmark_probe.h
tests/test_goldenmaster/: CMakeLists.txt  test_goldenmaster.cpp  test_goldenmaster.h
tests/test_markdownfolding/: CMakeLists.txt  test_markdownfolding.cpp  test_markdownfolding.h
tests/test_markdownparser/: CMakeLists.txt  test_markdownparser.cpp  test_markdownparser.h
tests/test_textfolding/: CMakeLists.txt  test_textfolding.cpp  test_textfolding.h  test_textfolding.pro
tests/test_utils/: CMakeLists.txt  test_utils.cpp  test_utils.h  test_utils.pro
(+169 files in other folders)
